# HCI-Mouse

./: .gitignore  3multi3.ipynb  BitDetector.py  IMG_STR.py  README.md  RGB_auto.py  RGB_test.py  Report.py  Simple_DOC.md  SlideWindow.py  angle_test.py  autotest.py  bkp_rx  chromatic_test.cpp  chromatic_test.py  chromatic_test_utils.h  constants.py  data_location.csv  data_single.csv  data_single_813.csv  data_single_noise.csv  data_single_pure.csv  direction_judge.py  fiveBsixB_coding.py  hci.py  hci2.py  image_collect.py  interpolate_f.py  lab1.cpp  location2file.py  main_variables.py  monitor_raw.py  move_report.py  new_avi.txt  new_hci.py  new_mkv.txt  off_hci.py  one_val2file.py  p1  p2  (+20 more)
CommTest/: CMakelists.txt  test.py  test2.py
ImageProcessing/: New Text Document.txt  Untitled-1.txt  Untitled-2.txt  Untitled-3.txt  bound_rgb.py  color_space_utils.py  image_utils.py  location_display.py  offline_location.py  space_complement.py  te.txt  tmp.py
Tic-Tac-Toe/: tic-tac-toe.py
angle_data/: kmean.py  line_detect.py  online.py  preprocessing.py  red.py  static_utils.py  ultimate_angle_detect.py  white.py
angle_lab/: image_collect.py
display/: CMakeLists.txt  README.md  autoBuild.sh  autoBuild_linux.sh  autoBuild_windows.sh  chessdemo.cpp  common.h  curvedata.cpp  curvedata.h  curvelayer.cpp  curvelayer.h  demo_go.cpp  demo_whac.cpp  demo_whac_1.cpp  demo_whac_shader.cpp  demo_whac_tt.cpp  display.cpp  dragdemo.cpp  dragrectlayer.cpp  dragrectlayer.h  hcicontroller.cpp  hcicontroller.h  imageUtils.cpp  imageUtils.h  layer_utils.h  layerobject.cpp  layerobject.h  main.cpp  mousefifo.h  multimouse.cpp  multimouse.h  rawinputdemo.cpp  renderer.cpp  renderer.h  sen_test.cpp  shader.cpp  shader.h  simpleChess.cpp  simpleChess.h  smallsample.cpp  (+11 more)
display/data/: adjustFragment.glsl  adjustFragment1.glsl  defaultFragment.glsl  defaultVertex.glsl  defaultVertex1.glsl  movingFrag.glsl  newAdjFrag.glsl
display/deprecated/: multimouse.cpp  multimouse.h  rawinputdemo.cpp
display/old/: data_generator.h  display.cpp  layer_utils.h
display/py/: curveControl.py  curvedata.txt  test.cpp  test.sh  timestamp.cpp
display/winusb/: CMakelists.txt  basictest.cpp  bkp.cpp  libusb_utils.cpp  libusb_utils.h  monitor_raw.py  mousecore.cpp  mousecore.h  mousecore_native.cpp  mousecoretest.cpp  rx_dec.py  setting.py  test.cpp  test.py  usb_utils.cpp  usb_utils.h
display/winusb/deprecated/: test.cpp
display/winusb/native_pretest/: CMakeLists.txt  test.cpp
fine_grained/: fg.py  layer_generator.py
handle_chromatic_test/: RGB_color_space.m  draw.m  draw3d.m  draw_scatter.m  messyit.m
image_processing/: Untitled-2.cpp  location_display.py  temp.py  test.txt  to_grey_rgb.py
lab_code/: bg_test_analyzer.m  bound.m  vlp_parser.m
legency/: SlideWindow_bkp.py  cdf_draw.py  chromatic_test.py  chromatic_test_design.md  new.txt  new_mkv.txt  one_bit_test.py  one_val2file.py  test.cpp  test.py
legency/OpenCV/: image_process.h  readImage.cpp
legency/Tic-Tac-Toe/: ttt-setting.py
legency/handle_chromatic_test/: cut.m  normalize.m  rgb2xyY.m  test.m
legency/openGL/: image_process_win.h  location.cpp  new_im  new_im2  test_cmpl.sh
legency/render/: Makefile  chromatic-test.c  utils.h
openGL/: QuickStart2openGL.md  black_n_white.cpp  cmpl.sh  data_generator.h  display.cpp  image_process.h  image_test.cpp  layer_utils.h  location.cpp  location_cmpl.sh  one_cmpl.sh  one_value.cpp  test.cpp  test_cmpl.sh  utils.h
openGL/glad/include/glad/: glad.h
openGL/glad/src/: glad.c
py_dev/: TODO  angle.py  comm_handler.py  direction_judge.py  hci.py  location.py  pipe_sever.py  setting.py  utils.py
py_mod/: angle.py  device.py  location.py
receiver/: DSP_utils.py  device_utils.py  figure_utils.py  main.py  settings.py  test_utils.py
render/: Makefile  bck_modeset_vsync.c  location-modeset-vsync.c  modeset-double-buffered.c  modeset-vsync.c  modeset.c  share_data  utils.h
render/Tic-Tac-Toe/: tic-tac-toe.py
sensitivity_lab/: bare_still.csv  bare_still_accum.csv  bare_still_accum2.csv  bare_still_accum3.csv  color-diff-ber.csv  constants.py  data233.csv  even_val_DCremove.csv  filter.py  mean_var.csv  monitor_raw.py  off_hci.py  pos_data2.csv  snr-diff-baseColor.ipynb  utils.py
